--- a/cloud/v7.ga.yaml
+++ b/cloud/v7.ga.yaml
@@ -7823,6 +7823,540 @@ paths:
       security:
         - TokenAuthentication: []
         - BasicAuthentication: []
+  /securitygroupsrules:
+    get:
+      tags:
+        - Security Groups
+      summary: List Security Group rules
+      description: List all rules for the specified Security Group.
+      operationId: securitygroupsrulesGet
+      parameters:
+        - name: vpcId
+          in: query
+          description: The unique ID of the vpc.
+          required: true
+          schema:
+            type: string
+        - name: datacenterId
+          in: query
+          description: The unique ID of the data center.
+          required: true
+          schema:
+            type: string
+        - name: securityGroupId
+          in: query
+          description: The unique ID of the security group.
+          required: true
+          schema:
+            type: string
+        - name: pretty
+          in: query
+          description: Controls whether the response is pretty-printed (with indentations and new lines).
+          schema:
+            type: boolean
+            default: true
+        - name: offset
+          in: query
+          description: The first element (from the complete list of the elements) to include in the response (used together with <b><i>limit</i></b> for pagination).
+          schema:
+            minimum: 0
+            type: integer
+            format: int32
+            default: 0
+        - name: limit
+          in: query
+          description: The maximum number of elements to return (use together with offset for pagination).
+          schema:
+            maximum: 10000
+            minimum: 1
+            type: integer
+            format: int32
+            default: 1000
+      responses:
+        '200':
+          description: Successful operation
+          headers:
+            X-RateLimit-Remaining:
+              description: The number of requests that can still be made without triggering a failure response.
+              schema:
+                type: integer
+                format: int32
+            X-RateLimit-Limit:
+              description: The average number of requests per minute allowed.
+              schema:
+                type: integer
+                format: int32
+            X-RateLimit-Burst:
+              description: The maximum number of concurrent API requests allowed.
+              schema:
+                type: integer
+                format: int32
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/FirewallRules'
+        default:
+          description: >-
+            Any erroneous status code:
+              400 (parse error),
+              401 (auth error),
+              402 (trial access),
+              403 (insufficient privileges),
+              404 (not found),
+              405 (unsupported HTTP method),
+              415 (unsupported content type),
+              422 (validation error),
+              429 (request rate limit exceeded),
+              500 (server error),
+              or 503 (maintenance).
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      security:
+        - BasicAuthentication: []
+        - TokenAuthentication: []
+    post:
+      tags:
+        - Security Groups
+      summary: Create Firewall rule to a Security Group
+      description: Create one firewall rule and attach it to the existing security group
+      operationId: securitygroupsrulesPost
+      parameters:
+        - name: vpcId
+          in: query
+          description: The unique ID of the vpc.
+          required: true
+          schema:
+            type: string
+        - name: datacenterId
+          in: query
+          description: The unique ID of the data center.
+          required: true
+          schema:
+            type: string
+        - name: securityGroupId
+          in: query
+          description: The unique ID of the security group.
+          required: true
+          schema:
+            type: string
+      requestBody:
+        description: The firewall to be attached (or created and attached).
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/FirewallRule'
+        required: true
+      responses:
+        '200':
+          description: Successful operation
+          headers:
+            X-RateLimit-Remaining:
+              description: The number of requests that can still be made without triggering a rate limit.
+              schema:
+                type: integer
+                format: int32
+            X-RateLimit-Limit:
+              description: The average number of requests per minute allowed.
+              schema:
+                type: integer
+                format: int32
+            X-RateLimit-Burst:
+              description: The maximum number of concurrent requests allowed.
+              schema:
+                type: integer
+                format: int32
+            Location:
+              description: Callback URL to poll async operation status.
+              schema:
+                pattern: 'https://[apiBaseUri]/requests/[requestId]/status'
+                type: string
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/FirewallRule'
+        default:
+          description: >-
+            Any erroneous status code:
+              400 (parse error),
+              401 (auth error),
+              402 (trial access),
+              403 (insufficient privileges),
+              404 (not found),
+              405 (unsupported HTTP method),
+              415 (unsupported content type),
+              422 (validation error),
+              429 (request rate limit exceeded),
+              500 (server error),
+              or 503 (maintenance).
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      security:
+        - TokenAuthentication: []
+        - BasicAuthentication: []
+      x-codegen-request-body-name: firewallRule
+  /securitygroupsrules/{ruleId}:
+    get:
+      tags:
+        - Security Groups
+      summary: Retrieve security group rule by id
+      description: Retrieve the properties of the specified Security Group rule.
+      operationId: securitygroupsrulesFindById
+      parameters:
+        - name: vpcId
+          in: query
+          description: The unique ID of the vpc.
+          required: true
+          schema:
+            type: string
+        - name: datacenterId
+          in: query
+          description: The unique ID of the data center.
+          required: true
+          schema:
+            type: string
+        - name: securityGroupId
+          in: query
+          description: The unique ID of the security group.
+          required: true
+          schema:
+            type: string
+        - name: ruleId
+          in: path
+          description: The unique ID of the Security Group rule.
+          required: true
+          schema:
+            type: string
+        - name: pretty
+          in: query
+          description: Controls whether the response is pretty-printed (with indentations and new lines).
+          schema:
+            type: boolean
+            default: true
+        - name: depth
+          in: query
+          description: >-
+            Controls the detail depth of the response objects.
+            GET /datacenters/[ID]
+              - depth=0: Only direct properties are included;
+                         children (servers and other elements) are not included.
+              - depth=1: Direct properties and children references are included.
+              - depth=2: Direct properties and children properties are included.
+              - depth=3: Direct properties and children properties and children's children are included.
+              - depth=... and so on
+          schema:
+            maximum: 10
+            minimum: 0
+            type: integer
+            format: int32
+            default: 0
+      responses:
+        '200':
+          description: Successful operation
+          headers:
+            X-RateLimit-Remaining:
+              description: The number of requests that can still be made without triggering a failure response.
+              schema:
+                type: integer
+                format: int32
+            X-RateLimit-Limit:
+              description: The average number of requests per minute allowed.
+              schema:
+                type: integer
+                format: int32
+            X-RateLimit-Burst:
+              description: The maximum number of concurrent API requests allowed.
+              schema:
+                type: integer
+                format: int32
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/FirewallRule'
+        default:
+          description: >-
+            Any erroneous status code:
+              400 (parse error),
+              401 (auth error),
+              402 (trial access),
+              403 (insufficient privileges),
+              404 (not found),
+              405 (unsupported HTTP method),
+              415 (unsupported content type),
+              422 (validation error),
+              429 (request rate limit exceeded),
+              500 (server error),
+              or 503 (maintenance).
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      security:
+        - BasicAuthentication: []
+        - TokenAuthentication: []
+    put:
+      tags:
+        - Security Groups
+      summary: Modify a Security Group Rule
+      description: Modifies the properties of the specified Security Group Rule.
+      operationId: securitygroupsrulesPut
+      parameters:
+        - name: vpcId
+          in: query
+          description: The unique ID of the vpc.
+          required: true
+          schema:
+            type: string
+        - name: datacenterId
+          in: query
+          description: The unique ID of the data center.
+          required: true
+          schema:
+            type: string
+        - name: securityGroupId
+          in: query
+          description: The unique ID of the security group.
+          required: true
+          schema:
+            type: string
+        - name: ruleId
+          in: path
+          description: The unique ID of the Security Group Rule.
+          required: true
+          schema:
+            type: string
+        - name: pretty
+          in: query
+          description: Controls whether the response is pretty-printed (with indentations and new lines).
+          schema:
+            type: boolean
+            default: true
+      requestBody:
+        description: The modified Security Group Rule.
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/FirewallRule'
+        required: true
+      responses:
+        '202':
+          description: Successful operation
+          headers:
+            X-RateLimit-Remaining:
+              description: The number of requests that can still be made without triggering a failure response.
+              schema:
+                type: integer
+                format: int32
+            X-RateLimit-Limit:
+              description: The average number of requests per minute allowed.
+              schema:
+                type: integer
+                format: int32
+            X-RateLimit-Burst:
+              description: The maximum number of concurrent API requests allowed.
+              schema:
+                type: integer
+                format: int32
+            Location:
+              description: Callback URL to poll async operation status.
+              schema:
+                pattern: 'https://[apiBaseUri]/requests/[requestId]/status'
+                type: string
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/FirewallRule'
+        default:
+          description: >-
+            Any erroneous status code:
+              400 (parse error),
+              401 (auth error),
+              402 (trial access),
+              403 (insufficient privileges),
+              404 (not found),
+              405 (unsupported HTTP method),
+              415 (unsupported content type),
+              422 (validation error),
+              429 (request rate limit exceeded),
+              500 (server error),
+              or 503 (maintenance).
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      security:
+        - BasicAuthentication: []
+        - TokenAuthentication: []
+      x-codegen-request-body-name: rule
+    delete:
+      tags:
+        - Security Groups
+      summary: Remove a Firewall Rule from a Security Group
+      description: Removes the specific Firewall Rule from the Security Group and delete the Firewall rule
+      operationId: securitygroupsrulesDelete
+      parameters:
+        - name: vpcId
+          in: query
+          description: The unique ID of the vpc.
+          required: true
+          schema:
+            type: string
+        - name: datacenterId
+          in: query
+          description: The unique ID of the data center.
+          required: true
+          schema:
+            type: string
+        - name: securityGroupId
+          in: query
+          description: The unique ID of the security group.
+          required: true
+          schema:
+            type: string
+        - name: ruleId
+          in: path
+          description: The unique ID of the firewall rule.
+          required: true
+          schema:
+            type: string
+      responses:
+        '202':
+          description: Accepted. The request has been accepted for processing.
+          headers:
+            X-RateLimit-Remaining:
+              description: The number of requests that can still be made without triggering a rate limit.
+              schema:
+                type: integer
+                format: int32
+            X-RateLimit-Limit:
+              description: The average number of requests per minute allowed.
+              schema:
+                type: integer
+                format: int32
+            X-RateLimit-Burst:
+              description: The maximum number of concurrent requests allowed.
+              schema:
+                type: integer
+                format: int32
+          content: {}
+        default:
+          description: >-
+            Any erroneous status code:
+              400 (parse error),
+              401 (auth error),
+              402 (trial access),
+              403 (insufficient privileges),
+              404 (not found),
+              405 (unsupported HTTP method),
+              415 (unsupported content type),
+              422 (validation error),
+              429 (request rate limit exceeded),
+              500 (server error),
+              or 503 (maintenance).
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      security:
+        - TokenAuthentication: []
+        - BasicAuthentication: []
+    patch:
+      tags:
+        - Security Groups
+      summary: Partially modify Security Group Rules
+      description: Update the properties of the specified Security Group rule.
+      operationId: securitygroupsrulesPatch
+      parameters:
+        - name: vpcId
+          in: query
+          description: The unique ID of the vpc.
+          required: true
+          schema:
+            type: string
+        - name: datacenterId
+          in: query
+          description: The unique ID of the data center.
+          required: true
+          schema:
+            type: string
+        - name: securityGroupId
+          in: query
+          description: The unique ID of the security group.
+          required: true
+          schema:
+            type: string
+        - name: ruleId
+          in: path
+          description: The unique ID of the Security Group Rule.
+          required: true
+          schema:
+            type: string
+        - name: pretty
+          in: query
+          description: Controls whether the response is pretty-printed (with indentations and new lines).
+          schema:
+            type: boolean
+            default: true
+      requestBody:
+        description: The properties of the Security Group Rule to be updated.
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/FirewallruleProperties'
+        required: true
+      responses:
+        '202':
+          description: Successful operation
+          headers:
+            X-RateLimit-Remaining:
+              description: The number of requests that can still be made without triggering a failure response.
+              schema:
+                type: integer
+                format: int32
+            X-RateLimit-Limit:
+              description: The average number of requests per minute allowed.
+              schema:
+                type: integer
+                format: int32
+            X-RateLimit-Burst:
+              description: The maximum number of concurrent API requests allowed.
+              schema:
+                type: integer
+                format: int32
+            Location:
+              description: Callback URL to poll async operation status.
+              schema:
+                pattern: 'https://[apiBaseUri]/requests/[requestId]/status'
+                type: string
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/FirewallRule'
+        default:
+          description: >-
+            Any erroneous status code:
+              400 (parse error),
+              401 (auth error),
+              402 (trial access),
+              403 (insufficient privileges),
+              404 (not found),
+              405 (unsupported HTTP method),
+              415 (unsupported content type),
+              422 (validation error),
+              429 (request rate limit exceeded),
+              500 (server error),
+              or 503 (maintenance).
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      security:
+        - BasicAuthentication: []
+        - TokenAuthentication: []
+      x-codegen-request-body-name: rule
 components:
   schemas:
     AttachedVolumes:
