--- a/cloud/v7.ga.yaml
+++ b/cloud/v7.ga.yaml
@@ -6126,7 +6126,7 @@ paths:
 
          A location is identified by a combination of the following characters: 
 
-         * a two-character **regionId**, which represents a country (example: 'de') 
+         * a two-character **region**, which represents a country (example: 'de') 
 
          * a three-character **locationId**, which represents a city. The 'locationId' is typically based on the IATA code of the city's airport (example: 'txl'). 
 
@@ -6191,27 +6191,14 @@ paths:
         - Metadata
       summary: Get Location by region and ID
       description: >-
-        Retrieves the available physical locations where you can deploy cloud
-        resources in a VDC. 
-
-         A location is identified by a combination of the following characters: 
-
-         * a two-character **regionId**, which represents a country (example: 'de') 
-
-         * a three-character **locationId**, which represents a city. The 'locationId' is typically based on the IATA code of the city's airport (example: 'txl'). 
-
-         >Note that 'locations' are read-only and cannot be changed.
+        Retrieves the information about the location specified by its ID. The
+        'locationId' consists of the three-digit identifier of the city
+        according to the IATA code.
       operationId: locationsFindId
       parameters:
         - name: locationId
           in: path
           description: The unique ID of the location.
-          required: true
-          schema:
-            type: string
-        - name: region
-          in: query
-          description: The unique ID of the region.
           required: true
           schema:
             type: string
